--- a/Touchstone Brother IpP/Browser.xaml
+++ b/Touchstone Brother IpP/Browser.xaml
@@ -1,25 +1,82 @@
 ﻿<Window x:Class="Touchstone_Brother_IpP.Browser"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:local="clr-namespace:Touchstone_Brother_IpP"      
         xmlns:ViewModels="clr-namespace:Touchstone_Brother_IpP.Models"
-        xmlns:local="clr-namespace:Touchstone_Brother_IpP"        
-        DataContext="{d:DesignInstance ViewModels:BrowserViewModel}"
-        mc:Ignorable="d"
-        Title="Browser" Height="600" Width="800" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="#FF2B2B2B">
+        d:DataContext="{d:DesignInstance ViewModels:BrowserViewModel}"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        mc:Ignorable="d" 
+        Title="Browser" Height="500" Width="{Binding width, Mode=TwoWay}" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="#FF2B2B2B">
     
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="700"/>
+            <RowDefinition Height="400"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-
+            <Grid.Resources>
+                <Style TargetType="{x:Type Button}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="Button">
+                                <Grid>
+                                    <Ellipse Fill="{TemplateBinding Background}"/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Style.Triggers>
+                        <EventTrigger RoutedEvent="MouseEnter">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation From="#ff1414" To="#ff5900" Duration="0:0:0.2" Storyboard.TargetProperty="Background.Color"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="MouseLeave">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation From="#ff5900" To="#ff1414" Duration="0:0:0.2" Storyboard.TargetProperty="Background.Color"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="PreviewMouseDown">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation From="#ff5900" To="#ffccaf" Duration="0:0:0.1" Storyboard.TargetProperty="Background.Color"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="PreviewMouseUp">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation From="#ffccaf" To="#ff5900" Duration="0:0:0.1" Storyboard.TargetProperty="Background.Color"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Resources>
+            <Grid Width="{Binding width}" Height="20" Background="#FF3D3D3D" MouseDown="DragMove" VerticalAlignment="Top">
+                <TextBlock Text="TS" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/>
+                <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top">                    
+                    <Button x:Name="ButtonClose" VerticalAlignment="Center" Background="Red" BorderBrush="{x:Null}" Margin="2 5 5 2" Width="12" Height="12" HorizontalAlignment="Right" HorizontalContentAlignment="Left" Click="ButtonClose_Click"/>
+                </StackPanel>
+            </Grid>
         </Grid>
         <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" Height="500" Width="700">
-            <Frame NavigationUIVisibility="Hidden" Content="{Binding ViewFrameContext}"/>
+            <Frame NavigationUIVisibility="Hidden" Content="{Binding ViewFrameContext}" Width="700" Height="500" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+        </Grid>
+        <Grid Grid.Row="2">
+            <Grid Background="#FF3B3B3B">
+                <TextBlock HorizontalAlignment="Left" FontWeight="Normal" FontFamily="Arial" Margin="20 0 0 0"  VerticalAlignment="Center" Foreground="White" Text="Selected:"/>
+                <TextBlock HorizontalAlignment="Left" FontWeight="SemiBold" FontFamily="Arial" Margin="75 0 0 0"  VerticalAlignment="Center" Foreground="White" Text="{Binding selectedObject}"/>
+                <Button BorderBrush="{x:Null}" HorizontalAlignment="Right" Margin="0 0 30 0" Background="MediumSeaGreen" Foreground="PaleGreen" Width="40" Height="25"/>
+                <Button BorderBrush="{x:Null}" HorizontalAlignment="Right" Margin="0 0 80 0" Background="IndianRed" Foreground="Red" Width="40" Height="25"/>
+            </Grid>
         </Grid>
     </Grid>
 </Window>
